# animal-metrology

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-TW.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/model/: schemas.py
app/models/: schemas.py
app/routers/: analyze.py  health.py
app/services/: coco_filter.py  depth_estimation.py  eye_detection.py  measurement.py  segmentation.py
app/utils/: version.py  visualization.py
data/: sample_results.csv
data/test_annotations/: test_instances.json
scripts/: download_coco.sh  entrypoint.sh  extract_test_annotations.py  run_demo.py
tests/: test_depth_estimation.py  test_measurement.py  test_pipeline.py
