[project]
name = "animal-metrology"
version = "0.1.0"
description = "Image segmentation + metrology pipeline for measuring inter-ocular and inter-animal eye distances"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.9",
    "pycocotools==2.0.8",
    "ultralytics==8.3.0",
    "opencv-python-headless==4.10.0.84",
    "numpy>=1.24.0,<2.0.0",
    "Pillow>=10.0.0",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    # Eye detection (RTMPose + AP-10K via ONNX)
    "rtmlib>=0.0.15",
    "onnxruntime>=1.15.0",
    # Depth estimation (DA V2 fallback)
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.0",
    "httpx==0.27.0",
]
